# Moms_insta

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: content.rs  image.rs  keyword.rs  mod.rs  project.rs  research.rs  settings.rs
src-tauri/src/models/: content.rs  mod.rs  project.rs  settings.rs
src-tauri/src/services/: anthropic.rs  crossref.rs  google.rs  mod.rs  news.rs  openai.rs  pubmed.rs
src/components/content/: ContentProgressModal.tsx
src/components/layout/: CenterPanel.tsx  LeftPanel.tsx  Panel1ProjectResearch.tsx  Panel2ContentPlan.tsx  Panel3ImageSettings.tsx  Panel4GeneratedImages.tsx  RightPanel.tsx
src/components/layout-editor/: ElementSettingsPanel.tsx  LayoutCanvas.tsx  PresetSelector.tsx  index.ts
src/components/modals/: ApiCallPreviewModal.tsx  ContentGroupModal.tsx  ImageGenerationProgressModal.tsx  ProjectCreateModal.tsx  ProjectListModal.tsx  ResearchListModal.tsx  ResearchSelectModal.tsx
src/components/research/: ResearchDetailModal.tsx  (+1 more)
src/constants/: layoutEditor.ts
src/hooks/: useLayoutEditor.tsx  useSystemFonts.ts
src/services/: canvasRenderer.ts  tauriApi.ts
src/stores/: apiPreviewStore.ts  contentStore.ts  imageStore.ts  keywordStore.ts  projectStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: canvasRenderer.ts
(+8 files in other folders)
