[package]
name = "cosmetic-carousel-maker"
version = "1.0.0"
description = "화장품 성분 캐러셀 제작 앱"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "cosmetic_carousel_maker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
opener = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
urlencoding = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
ttf-parser = "0.24"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
